# llm-epistemic-frame-anchoring

./: .gitignore  README.md  pyproject.toml  requirements.txt
bench/: SOURCES.md  efa_bench.json
data/: dtg_300.json
efa/: __init__.py  config.py  eca.py  embeddings.py  llm.py
efa/dtg/: __init__.py  graph.py  nodes.py
efa/pipeline/: __init__.py  coverage.py  delta.py  frame_gen.py  mea.py  probe.py  sampler.py  synthesis.py  verify.py
experiments/: analyze.py  judge.py  recalibrate.py  run_conditions.py  score_embed_only.py
results/: recalibrated.json  summary_embed.json
scripts/: build_dtg.py  calibrate_dtg.py  compare.py  run_eca.py
tests/: test_e2e.py
